added buttons dynamically in main.js on click on one of the report types

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
             crossorigin="anonymous">
-      <link rel="stylesheet" href="main.css">
       <script src="main.js"></script>
       <title>Reports Generator 2.0</title>
 </head>
@@ -49,25 +48,20 @@
                   </div>
             </div>
             <p class="mb-1">Now that we have all the data, upload the files you downloaded form Tableau earlier</p>
-            <div class="input-group mb-3">
-                  <div class="custom-file">
+            <div id="fileInputs"></div>
+                  <!-- <div class="custom-file mb-3">
                         <input type="file" class="custom-file-input" id="grades_by_subject" name="grades_by_subject">
                         <label class="custom-file-label" for="grades_by_subject">grades_by_subject</label>
                   </div>
-            </div>
-            <div class="input-group mb-3">
-                  <div class="custom-file">
+                  <div class="custom-file mb-3">
                         <input type="file" class="custom-file-input" id="grades_by_question" name="grades_by_question">
                         <label class="custom-file-label" for="grades_by_question">grades_by_question</label>
                   </div>
-            </div>
-            <div class="input-group mb-3">
-                  <div class="custom-file">
+                  <div class="custom-file mb-3">
                         <input type="file" class="custom-file-input" id="struggling_students" name="struggling_students">
                         <label class="custom-file-label" for="struggling_students">struggling_students</label>
-                  </div>
-            </div>
-            <button class="btn btn-primary" id="submitButton" type="submit" name="action" disabled>Button</button>
+                  </div> -->
+            <button class="btn btn-primary" id="submitButton" type="submit" name="action" disabled>Download Report</button>
       </form>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
