now on any change on report type, the file list of all inputs will reset

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,9 @@
                   <label class="btn btn-primary" id="practiceReport">
                         <input type="radio" name="options" id="option2" autocomplete="off" checked> Practice Report
                   </label>
+                  <label class="btn btn-primary" id="gradeAssessmentReport">
+                        <input type="radio" name="options" id="option3" autocomplete="off" checked> Grade Assessment Report
+                  </label>
             </div>
             <p class="mb-1">Now, please download the report information from tableau:</p>
             <a class="btn btn-secondary mb-3 disabled" id="tableauButton" role="button" target="_blank">Go To Tableau</a>
