--- a/client/index.html
+++ b/client/index.html
@@ -19,14 +19,17 @@
       <form id="report_upload_form" method="POST" enctype="multipart/form-data">
             <p class="mb-1">Please select one of the report types below:</p>
             <div class="btn-group btn-group-toggle mb-3" data-toggle="buttons" id="selectReportType">
-                  <label class="btn btn-primary" id="assessmentReport">
+                  <label class="btn btn-primary" id="assessment">
                         <input type="radio" name="options" id="option1" autocomplete="off" checked> Assessment Report
                   </label>
-                  <label class="btn btn-primary" id="practiceReport">
+                  <label class="btn btn-primary" id="practice">
                         <input type="radio" name="options" id="option2" autocomplete="off" checked> Practice Report
                   </label>
-                  <label class="btn btn-primary" id="gradeAssessmentReport">
+                  <label class="btn btn-primary" id="gradeAssessment">
                         <input type="radio" name="options" id="option3" autocomplete="off" checked> Grade Assessment Report
+                  </label>
+                  <label class="btn btn-primary" id="student">
+                        <input type="radio" name="options" id="option4" autocomplete="off" checked> Student Report
                   </label>
             </div>
             <p class="mb-1">Now, please download the report information from tableau:</p>
