--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,9 @@
                   <label class="btn btn-primary" id="student">
                         <input type="radio" name="options" id="option4" autocomplete="off" checked> Student Report
                   </label>
+                  <label class="btn btn-primary" id="recommendations">
+                        <input type="radio" name="options" id="option5" autocomplete="off" checked> Recommendations Report
+                  </label>
             </div>
             <p class="mb-1">Now, please download the report information from tableau:</p>
             <a class="btn btn-secondary mb-3 disabled" id="tableauButton" role="button" target="_blank">Go To Tableau</a>
